syntax = "proto3";


// Menentukan paket untuk file .proto ini
package info;

// Menentukan Go package untuk hasil generate kode
option go_package = "/proto/account/info;info"; // Ganti dengan path sesuai proyek Anda

service Info {
  rpc Create(InfoModel) returns (CreateResponse);
  rpc Read(ReadRequest) returns (ReadResponse);
}

message InfoModel {
  // @gotags: bson:"_id,omitempty"
  string id = 1;
  // @gotags: bson:"first_name"
  string first_name = 2;
  // @gotags: bson:"last_name"
  string last_name = 3;
}

message CreateResponse {
  bool status = 1;
  int32 code = 2;
  string msg = 3;
  string id = 4;
  string error = 5;
}

message ReadRequest {
  int32 limit = 1;
}

message ReadResponse {
  bool status = 1;
  int32 code = 2;
  string msg = 3;
  repeated InfoModel data = 4;
  string error = 5;
}
